--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ website/node_modules
 
 # Ignore the local dev requirements
 /main.tf
-terraform-provider-tfm
+terraform-provider-tfmigrate
 UnitTestWorkingDir/.terraform.lock.hcl
 
 website/vendor
@@ -39,3 +39,4 @@ website/vendor
 
 # Keep windows files with windows line endings
 *.winfile eol=crlf
+.terraform.lock.hcl
