--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,17 +71,35 @@ jobs:
           - '1.3.*'
           - '1.4.*'
     steps:
-      - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
-      - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        with:
+         ref: '${{ github.head_ref }}'
+      - name: Confirm current branch with remote
+        run: |
+          echo "Current branch with remote: $(git rev-parse --abbrev-ref --symbolic-full-name @{u})"
+
+      - name: Setup Go
+        uses: actions/setup-go@v5.3.0 # v5.0.1
         with:
           go-version-file: 'go.mod'
           cache: true
-      - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
-      - run: go mod download
-      - env:
+
+      - name: Download dependencies
+        run: go mod download
+
+      - name: Print Github token being used in GHA
+        run: echo -n ${{secrets.GITHUB_TOKEN}} | sha256sum
+
+      - name: Run acceptance test
+        env:
           TF_ACC: "1"
+          TF_GIT_PAT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
