--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,68 +1,27 @@
-version: "2"
-run:
-  tests: true
+# Visit https://golangci-lint.run/ for usage documentation
+# and information on other useful linters
+issues:
+  max-per-linter: 0
+  max-same-issues: 0
+
 linters:
+  disable-all: true
   enable:
-    - bodyclose
-    - depguard
-    - gocritic
+    - durationcheck
+    - errcheck
+    - copyloopvar
+    - forcetypeassert
     - godot
+    - gofmt
+    - gosimple
+    - ineffassign
+    - makezero
     - misspell
-    - rowserrcheck
-    - sqlclosecheck
+    - nilerr
+    - predeclared
     - staticcheck
-    - testifylint
+    - tenv
     - unconvert
-  settings:
-    depguard:
-      rules:
-        main:
-          deny:
-            - pkg: github.com/gogo/status
-            - pkg: github.com/gogo/codes
-            - pkg: github.com/gogo/protobuf
-    godot:
-      scope: declarations
-      capital: false
-    misspell:
-      locale: US
-      ignore-rules:
-        - cancelled
-    rowserrcheck:
-      packages:
-        - github.com/jmoiron/sqlx
-    staticcheck:
-      checks:
-        - all
-        - '-ST1003' # disable the rule ST1003
-  exclusions:
-    generated: lax
-    presets:
-      - comments
-      - common-false-positives
-      - legacy
-      - std-error-handling
-    rules:
-      - linters:
-          - bodyclose
-        path: (.+)_test.go
-      - linters:
-          - staticcheck
-        text: 'SA1019:'
-      - path: (.+)\.go$
-        text: ifElseChain
-    paths:
-      - _mocks
-      - third_party$
-      - builtin$
-      - examples$
-formatters:
-  enable:
-    - goimports
-  exclusions:
-    generated: lax
-    paths:
-      - _mocks
-      - third_party$
-      - builtin$
-      - examples$
+    - unparam
+    - unused
+    - govet
