--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ permissions:
   contents: read
 
 jobs:
+  lint:
+    uses: ./.github/workflows/lint.yml
   # Ensure project builds before running testing matrix
   build:
     name: Build
@@ -58,7 +60,9 @@ jobs:
   # Run acceptance tests in a matrix with Terraform CLI versions
   test:
     name: Terraform Provider Acceptance Tests
-    needs: build
+    needs:
+      - lint
+      - build
     runs-on: ubuntu-latest
     timeout-minutes: 15
     strategy:
