:green_heart: ci(build, test): Make `test.yml` reusable with dynamic inputs and fallback support
📝Description:

This change refactors the `test.yml` workflow to support both standalone execution (`push `/ `pull_request`) and reuse via workflow_call (e.g., from `build.yml`).

✅ Key changes:
	•	Added workflow_call support to allow test.yml to be called from other workflows.
	•	Introduced inputs for TF_ACC and ONLY_GO_MOD_SUM with sensible defaults (1 and false).
	•	Configured secrets (TF_GIT_PAT_TOKEN, TFE_TOKEN) to fall back to repo-level secrets when not passed explicitly.
	•	Updated build.yml to invoke test.yml via uses: and pass required inputs/secrets.

💡 This makes the test workflow fully reusable while preserving its ability to run standalone during PRs and pushes.

⸻

Benefits:
	•	Single source of truth for testing logic
	•	Better CI modularity and maintainability
	•	Improved compatibility with GitHub composite workflows

No breaking changes are expected for existing PR or push triggers.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,13 @@ jobs:
   # The implementation is inspired by envconsul -- https://go.hashi.co/get-go-version-example
   test:
     uses: ./.github/workflows/test.yml
+    with:
+      TF_ACC: '1'
+      ONLY_GO_MOD_SUM: 'false'
+    secrets:
+      TF_GIT_PAT_TOKEN: ${{ secrets.TF_GIT_PAT_TOKEN }}
+      TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
+
 
   get-go-version:
     name: "Detect Go toolchain version"
