--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,19 @@ name: Tests
 # Optionally, you can turn it on using a schedule for regular testing.
 on:
   workflow_call:
+    inputs:
+      TF_ACC:
+        required: false
+        type: string
+      ONLY_GO_MOD_SUM:
+        required: false
+        type: string
+    secrets:
+      TFE_TOKEN:
+        required: true
+      TF_GIT_PAT_TOKEN:
+        required: true
+
   pull_request:
     paths-ignore:
       - 'README.md'
@@ -74,6 +87,13 @@ jobs:
           - '1.2.*'
           - '1.3.*'
           - '1.4.*'
+
+    env:
+      TF_ACC: ${{ inputs.TF_ACC || '1' }}
+      ONLY_GO_MOD_SUM: ${{ inputs.ONLY_GO_MOD_SUM || 'false' }}
+      TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
+      TF_GIT_PAT_TOKEN: ${{ secrets.TF_GIT_PAT_TOKEN }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
@@ -117,9 +137,5 @@ jobs:
 
       - name: Run acceptance test
         if: ${{ env.ONLY_GO_MOD_SUM == 'false' || github.actor != 'dependabot[bot]' }}
-        env:
-          TF_ACC: "1"
-          TF_GIT_PAT_TOKEN: ${{ secrets.TF_GIT_PAT_TOKEN }}
-          TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
