--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -44,6 +44,12 @@ packages:
       outpkg: "net_mocks"
     interfaces:
       Client:
+  terraform-provider-tfmigrate/internal:
+    config:
+      dir: "_mocks"
+      outpkg: "mocks"
+    interfaces:
+      StackMigrationHashService:
   github.com/go-git/go-git/v5/plumbing/storer:
     config:
       dir: "_mocks/helper_mocks/iter_mocks"
