:construction: feat(dependencies): Updated go.mod to include `github.com/hashicorp/terraform-exec` and added go.work for module management; enhanced .gitignore for IDE and utility files.

--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,13 @@ website/node_modules
 *.test
 *.iml
 .vscode/
+.idea
 
 # Ignore the local dev requirements
 /main.tf
 terraform-provider-tfmigrate
 UnitTestWorkingDir/.terraform.lock.hcl
+terraform-migrate-utility
 
 website/vendor
 
