IND-2655 Added Workspace To Stack State Conversion And Upload For Stacks Migration (#193)

--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,14 @@ website/node_modules
 *.test
 *.iml
 .vscode/
+.idea
 
 # Ignore the local dev requirements
 /main.tf
 terraform-provider-tfmigrate
 UnitTestWorkingDir/.terraform.lock.hcl
+terraform-migrate-utility
+provider_tfmigrate_override.tfrc
 
 website/vendor
 
