:recycle: refactor(stack-migration): Enhanced `Read` operation with improved state management and migration hash generation; removed `ModifyPlan` implementation; disabled `godot` linter.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,7 +12,7 @@ linters:
     - staticcheck
     - testifylint
     - unconvert
-    - godot
+#    - godot
   settings:
     depguard:
       rules:
