Added Support To Enable Migration From HCP Terraform Workspace to Stacks (#242)
* IND-4034: Add TF RPC API Client (#165)

* IND-2654, IND-3998 ✨ feat(stacks-migration): Added stacks migration resource currently support uploading config files (#166)

* :sparkles: feat(stacks-migration): Added stacks migration resource to support currenly support uploading config files only

* :recycle: refactor (AwaitStackConfigurationCompletion): updated stack configuration status polling methode

* :recycle: refactor (GNUmakefile): updated makefile with dev-override and help command

* :white_check_mark: refactor (Create Action): Added create action

* :recycle: refactor (Create Action): removed the config directory path from state data

* :bug: fix: (GHA) added TFE_TOKEN setup in test workflow

* :green_heart: ci(build, test): Make `test.yml` reusable with dynamic inputs and fallback support

📝Description:

This change refactors the `test.yml` workflow to support both standalone execution (`push `/ `pull_request`) and reuse via workflow_call (e.g., from `build.yml`).

✅ Key changes:
	•	Added workflow_call support to allow test.yml to be called from other workflows.
	•	Introduced inputs for TF_ACC and ONLY_GO_MOD_SUM with sensible defaults (1 and false).
	•	Configured secrets (TF_GIT_PAT_TOKEN, TFE_TOKEN) to fall back to repo-level secrets when not passed explicitly.
	•	Updated build.yml to invoke test.yml via uses: and pass required inputs/secrets.

💡 This makes the test workflow fully reusable while preserving its ability to run standalone during PRs and pushes.

⸻

Benefits:
	•	Single source of truth for testing logic
	•	Better CI modularity and maintainability
	•	Improved compatibility with GitHub composite workflows

No breaking changes are expected for existing PR or push triggers.

* :white_check_mark: refactor (Read Action): Added read action

* :white_check_mark: refactor (stack_migration_resource): Addressed review comments updated regex

* :recycle: refactor(stack_migrat

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -20,12 +20,36 @@ packages:
       GitlabUtil:
       BitbucketUtil:
       GitUtil:
-  terraform-provider-tfmigrate/internal/helper:
+  terraform-provider-tfmigrate/internal/gitops:
     config:
       dir: "_mocks/helper_mocks/gitops_mocks"
       outpkg: "gitops_mocks"
     interfaces:
       GitOperations:
+  terraform-provider-tfmigrate/internal/helper:
+    config:
+      dir: "_mocks/helper_mocks"
+      outpkg: "helper_mocks"
+    interfaces:
+      TfStateOperations:
+  terraform-provider-tfmigrate/internal/util/tfe:
+    config:
+      dir: "_mocks/util_mocks/tfe_mocks"
+      outpkg: "tfe_mocks"
+    interfaces:
+      TfeUtil:
+  terraform-provider-tfmigrate/internal/util/net:
+    config:
+      dir: "_mocks/net_mocks"
+      outpkg: "net_mocks"
+    interfaces:
+      Client:
+  terraform-provider-tfmigrate/internal:
+    config:
+      dir: "_mocks"
+      outpkg: "mocks"
+    interfaces:
+      StackMigrationHashService:
   github.com/go-git/go-git/v5/plumbing/storer:
     config:
       dir: "_mocks/helper_mocks/iter_mocks"
