--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
       # When Terraform 1.8.0 final is released, this can be removed.
       - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
-          terraform_version: '1.8.0-alpha20240216'
+          terraform_version: '1.13.5'
           terraform_wrapper: false
       - run: go generate ./...
       - name: git diff
